--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.9.0",
-		"daisyui": "^2.49.0"
+		"daisyui": "^2.49.0",
+		"pocketbase": "^0.12.0"
 	}
 }
